Add tests for UserService